overflow fix

--- a/src/CSS/BlogDisplay.module.css
+++ b/src/CSS/BlogDisplay.module.css
@@ -7,6 +7,7 @@
   opacity: 0;
   animation: fadeIn 0.8s ease 0.2s forwards;
   border: 2px solid black;
+  overflow: auto;
 }
 
 @keyframes fadeIn {
