--- a/src/CSS/Wrapper.module.css
+++ b/src/CSS/Wrapper.module.css
@@ -32,7 +32,7 @@ main {
   flex: 1;
   /* background-color: blue; */
   height: 100vh;
-  overflow-y: auto;
+  /* overflow-y: auto; */
   margin: 0;
 }
 
